--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install Playwright
         run: |
           python -m pip install --upgrade pip
+          python -m pip install requests
           python -m pip install playwright
           python -m playwright install chromium
 
